--- a/FashionMVCProject/Views/Home/Index.cshtml
+++ b/FashionMVCProject/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<main>
+﻿@model List<FeaturedProducts>
+<main>
         <section class="slick-slideshow">
             <div class="slick-custom">
                 <img src="~/assets/images/slideshow/medium-shot-business-women-high-five.jpeg" class="img-fluid" alt="">
